Styles for small screen footer, hopefully fixed background issue on mobile

--- a/backgrounds.css
+++ b/backgrounds.css
@@ -1,5 +1,5 @@
 html {
-    background-size: 100% 100%;
+    background-size: 100% 150%;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: 0 0;
@@ -59,7 +59,7 @@ html::before {
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 150%;
     width: 100%;
     overflow: hidden;
     background-color: transparent;
@@ -71,7 +71,7 @@ html::after {
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 150%;
     width: 100%;
     overflow: hidden;
     background-color: transparent;
