--- a/style-global.css
+++ b/style-global.css
@@ -75,7 +75,8 @@ footer {
         /*display: grid;
         grid-template-columns: 1fr 2fr;
         grid-template-rows: 1fr auto;*/
-        gap:20px;
+        column-gap: 20px;
+        row-gap: 20px;
     }
 
     #footerRightSide {
@@ -91,6 +92,12 @@ footer {
         grid-auto-flow: row;
         grid-auto-rows: 1fr;
         gap: 20px;
+
+        #footerNavigation, #footerSocialsLogo {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 20px;
+        }
     }
 
     #footerLeftSide {
@@ -105,17 +112,18 @@ footer {
         font-family: var(--font-marugo), sans-serif;
         text-align: center;
         width: 100%;
+        font-size: 1em;
     }
 
     #footerLogoContainer {
         align-self: center;
-        justify-self: end;
+        justify-self: center;
         display: flex;
         align-items: center;
         justify-content: center;
         #footerLogo {
             height: 100%;
-            max-width: 60%;
+            max-height: 100px;
             aspect-ratio: 1/1;
         }
     }
@@ -202,16 +210,18 @@ footer {
     .footerContainer {
         width: 100%;
         nav {margin-left: 1em};
-        .navItem {font-size: 1.5em};
-        justify-self: end;
+        .navItem {font-size: 1.25em};
+        justify-self: center;
         margin-inline-start: 10px;
+
+        max-width: 150px;
     }
 
 
     .footerTitle {
         font-family: var(--font-yuruka), sans-serif;
         font-weight: bold;
-        font-size: 2em;
+        font-size: 1.5em;
     }
 }
 
@@ -237,13 +247,12 @@ noscript {
 
 .socials {
     font-family: var(--font-standard) sans-serif;
-    font-weight: 500;
-    a {color:inherit;text-decoration: none; text-wrap: nowrap; font-weight: 500;}
-    a:hover::after, a:focus::after {text-decoration: underline;}
-    a:active::after {color: blue;text-decoration: underline;}
-    a {position: relative; display: inline flex; align-items: stretch;}
+    a {color:inherit;text-decoration: none; text-wrap: nowrap; font-weight: 600;position: relative; display: inline flex; align-items: stretch;}
+    a:active {color:blue;}
+    a:hover::after, a:hover>.socialsLinkText, a:focus::after, a:focus>.socialsLinkText {text-decoration: underline;}
+    a:active::after, a:active>.socialsLinkText {color: inherit;text-decoration: underline;}
 }
-.socials a:not(.noIcon)::before {content:"i";color:transparent;display:block;min-width:1em;margin-right:0.3em;background-position: center center;background-repeat: no-repeat;background-size:1em auto;text-decoration: none;}
+.socials a:not(.noIcon)::before {content:"i";color:transparent;display:inline-block;min-width:1em;margin-right:0.3em;background-position: center center;background-repeat: no-repeat;background-size:1em auto;}
 
 a.youtube::before{background-image: url("./images/socialIcons/youtube.svg");}
 a.youtube::after{content:"YouTube"}
